Genera Ingresos de Medicos

--- a/Ejercisio1Prac3/nbproject/project.properties
+++ b/Ejercisio1Prac3/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ejercisio1prac3.Ejercisio1Prac3
+main.class=ventana.inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
